--- a/FoodDeliverySystem/FoodDeliverySystem.csproj
+++ b/FoodDeliverySystem/FoodDeliverySystem.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="InverseBinding.cs" />
     <Compile Include="Producer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
